Fixed extra white space in html - header had bottom padding which was adding whitespace to bottom of html

--- a/styles/app.css
+++ b/styles/app.css
@@ -199,10 +199,15 @@ html {
   overflow: hidden;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   color: white;
   font-family: Questrial, sans-serif;
-  background-color: #080808;
+  background-color: white;
 }
 
 .wrapper {
@@ -225,7 +230,7 @@ h2 {
 }
 
 header {
-  margin: 30vh 0 35vh 0;
+  margin-top: 20vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
