--- a/styles/sass/partials/_general.scss
+++ b/styles/sass/partials/_general.scss
@@ -1,7 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
     color: white;
     font-family: Questrial, sans-serif;
-    background-color: #080808;
+    // background-color: #080808;
+    background-color: white;
   }
 
   .wrapper {
