--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -1,7 +1,8 @@
 
 
   header {
-      margin: 30vh 0 35vh 0;
+      // margin: 30vh 0 0 0;
+      margin-top: 20vh;
       display: flex;
       align-items: flex-start;
 
@@ -50,6 +51,7 @@
     /* display: none; */
     position: absolute;
     width: 100%;
+    // height: 100vh;
     top: 0;
     left: 0;
     bottom: 0;
